--- a/fistbump.html
+++ b/fistbump.html
@@ -115,9 +115,16 @@ https://gamedevelopment.tutsplus.com/picking-a-color-palette-for-your-games-artw
   <div id="ctrlbar">
     <div><a href="index.html"><img id="homeicon" src="img/home.svg" alt="home" /></a></div>
 
-    <div><input type="checkbox" class="slider" id="darkmode" checked="true" /><label for="darkmode">Dark mode</label></div>
 
-    <div><input type="checkbox" class="slider" id="colormode" /><label for="colormode">Color mode</label></div>
+    <div id="ctrlsettings"><input type="checkbox" id="ctrlset" /><label for="ctrlset"><img src="img/icon_ctrlsettings.svg" /></label>
+
+      <div class="ctrlbox">
+        <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
+
+        <div><input type="checkbox" class="slider" id="colormode" /><label for="colormode">Color mode</label></div>
+
+      </div>
+    </div>
 
     <button id="reload">Reload</button>
 
