--- a/colortouch.html
+++ b/colortouch.html
@@ -134,8 +134,9 @@
       @page {
         size: landscape;
       }
-      
+
       .icon {
+
         path,
         circle {
           stroke: black;
@@ -165,10 +166,15 @@
   <div id="ctrlbar">
     <div><a href="index.html"><img id="homeicon" src="img/home.svg" alt="home" /></a></div>
 
-    <div><input type="checkbox" class="slider" id="darkmode" checked="true" /><label for="darkmode">Dark mode</label></div>
+    <div id="ctrlsettings"><input type="checkbox" id="ctrlset" /><label for="ctrlset"><img src="img/icon_ctrlsettings.svg" /></label>
 
-    <div><input type="checkbox" class="slider" id="shapetoggle" /><label for="shapetoggle">Shapes</label></div>
+      <div class="ctrlbox">
+        <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
 
+        <div><input type="checkbox" class="slider" id="shapetoggle" /><label for="shapetoggle">Shapes</label></div>
+
+      </div>
+    </div>
 
     <button id="reload">Reload</button>
 
