--- a/lettersearch.html
+++ b/lettersearch.html
@@ -22,7 +22,7 @@
       position: relative;
       height: min(85vh, 98vw);
       width: 90vw;
-      margin: 0;
+      margin: 2em 0 0 0;
       left: 50%;
       transform: translate(-50%);
       cursor: default;
@@ -64,30 +64,33 @@
     }
 
 
-    #controls {
-      line-height: 1em;
-      user-select: none;
+    #ctrlbar {
 
       & h3 {
-        margin-bottom: 0.1em;
+        margin: 0.5em;
+        line-height: 1em;
+        padding: 0;
+      }
+
+      #mk_colors {
+        line-height: 1.25em;
+
+        &:has(#mk_red:checked)~#saccades .mark {
+          color: var(--tranared);
+        }
+
+        &:has(#mk_green:checked)~#saccades .mark {
+          color: var(--tranagreen);
+        }
+
+        &:has(#mk_green:checked):has(#mk_red:checked)~#saccades .mk_parttwo {
+          color: var(--tranared);
+        }
       }
     }
 
-
-    #controls:has(#mk_red:checked)~#saccades .mark {
-      color: var(--tranared);
-    }
-
-    #controls:has(#mk_green:checked)~#saccades .mark {
-      color: var(--tranagreen);
-    }
-
-
-    #controls:has(#mk_green:checked):has(#mk_red:checked)~#saccades .mk_parttwo {
-      color: var(--tranared);
-    }
-
     #marktypes {
+      line-height: 1.25em;
 
       &.maxed .mk_row:has(input:not(:checked)) {
         opacity: 0.5;
@@ -107,6 +110,9 @@
 
       }
 
+      #saccades {
+        margin:0;
+      }
       .mark {
         --marksize: 0.5in;
         print-color-adjust: exact !important;
@@ -122,32 +128,31 @@
   <div id="ctrlbar">
     <div><a href="index.html"><img id="homeicon" src="img/home.svg" alt="home" /></a></div>
 
-    <div><input type="checkbox" class="slider" id="darkmode" /><label class="button" for="darkmode">Dark mode</label></div>
+    <div id="ctrlsettings"><input type="checkbox" id="ctrlset" /><label for="ctrlset"><img src="img/icon_ctrlsettings.svg" /></label>
+
+      <div class="ctrlbox">
+        <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
+
+        <b>Marks:</b>
+
+        <div>Scale: <input id="mk_scale" type="range" min="0.3" max="1.5" value="1" step="0.05" /> <span id="mk_scalenum"></span></div>
+
+        <div id="marktypes"></div>
+
+        <b>Colors:</b>
+        <div id="mk_colors">
+          <input type="checkbox" checked id="mk_red"><label for="mk_red">Red filter</label><br />
+          <input type="checkbox" checked id="mk_green"><label for="mk_green">Green filter</label><br />
+
+        </div>
+
+      </div>
+    </div>
 
     <button id="reload">Reload</button>
 
   </div>
 
-  <div id="controls">
-    <div id="settings">*SETTINGS*</div>
-
-    <div class="ctrlbox">
-
-      <div>Scale <input id="mk_scale" type="range" min="0.3" max="1.5" value="1" step="0.05" /> <span id="mk_scalenum"></span></div>
-
-      <h3>Marks</h3>
-      <div id="marktypes"></div>
-
-
-      <h3>Colors</h3>
-      <div id="mk_colors">
-        <input type="checkbox" checked id="mk_red"><label for="mk_red">Red filter</label><br />
-        <input type="checkbox" checked id="mk_green"><label for="mk_green">Green filter</label><br />
-
-      </div>
-
-    </div>
-  </div>
 
   <div id="saccades" data-mark=""></div>
 
@@ -210,7 +215,6 @@
     // padding
     // mark font size
     //
-    let m;
     function showchart() {
       sac.replaceChildren(); // = "";
       let placedmarks = [];
@@ -296,9 +300,6 @@
           clickedmark = null;
         }
       }
-
-      m = document.querySelector(".mark");
-
     }
 
     function logicalmatch(a, b) {
@@ -315,7 +316,7 @@
       showchart();
     };
 
-    
+
     window.addEventListener("beforeprint", (e) => {
       sac.style.width = "10in";
       sac.style.height = "7.5in";
