--- a/shapechart.html
+++ b/shapechart.html
@@ -185,10 +185,16 @@
   <div id="ctrlbar">
     <div><a href="index.html"><img id="homeicon" src="img/home.svg" alt="home" /></a></div>
 
-    <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
 
-    <div><input type="checkbox" class="slider" id="shapearrow" /><label for="shapearrow">Shapes/Arrows</label></div>
+    <div id="ctrlsettings"><input type="checkbox" id="ctrlset" /><label for="ctrlset"><img src="img/icon_ctrlsettings.svg" /></label>
 
+      <div class="ctrlbox">
+        <div><input type="checkbox" class="slider" id="darkmode" /><label for="darkmode">Dark mode</label></div>
+
+        <div><input type="checkbox" class="slider" id="shapearrow" /><label for="shapearrow">Shapes/Arrows</label></div>
+
+      </div>
+    </div>
 
     <button id="reload">Reload</button>
 
