--- a/blocks_about.html
+++ b/blocks_about.html
@@ -28,7 +28,7 @@
       margin: 0 1em;
 
       &>div {
-        margin: 1em;
+        margin: 0.5em 0 0.5em 1em;
         /* text-indent: 0.5em; */
       }
 
@@ -62,6 +62,9 @@
 
       }
     }
+    h3,h2 {
+      margin:1.25em 0 0.25em;
+    }
   </style>
 </head>
 
@@ -75,6 +78,9 @@
   </div>
 
   <div id="abouttext">
+
+<h2>About the Pattern Blocks app</h2>
+<div>Here are some very nerdy details about my journey in creating this version of the game.</div>
 
     <h3>Scenario:</h3>
 
@@ -389,9 +395,9 @@
 
 
     <h3>Conclusion</h3>
-    <div>You're still here??? Well, I hope you enjoyed this journey into my mind.</div>
+    <div>You're still here??? Well, I hope you enjoyed this journey into my mind. Have fun playing!</div>
 
-    <div>Next project: Hexagon & triangle tile matching</div>
+    <!-- <div>Next project: Hexagon & triangle tile matching</div> -->
 
 
   </div>
