--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
   <script defer src="js/topmenu.js"></script>
 
   <style>
+:root {scroll-behavior: smooth} 
+
     #abouttext {
       font-size: min(18pt, 5vw);
       margin: 0 1em;
