--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         <li>Tranaglyphs:
           <ul>
             <li>Requires the use of red/green glasses. Red lens over right eye.</li>
-            <li>(Glyph images created using pure CSS.)</li>
+            <!-- <li>(Glyph images created using pure CSS.)</li> -->
             <li>Adjust glyph separation distance with arrow keys or Page up/Page down keys keys. (PageDown/Left/Down toward convergence, PageUp/Up/Right toward divergence).</li>
             <li>Use the calibration slider to adjust the distance between the two vertical lines so they are about 4 inches (10 cm) apart.</li>
           </ul>
