--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
     <h3 id="cpsaccades" class="printable interactive"><a href="cpsaccades.html">CP Saccades</a></h3>
     <div>
       <ul>
-        <li>Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display a the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked. </li>
+        <li>Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked. </li>
         <li>Instead of clicking the targets, you may use other means of identifying the target marker (eg, by placing a stick or physical pointer and verifying the correct target by looking there). In this case, press the space bar to advance the central marker to the next target.</li>
         <li>Switch to Multicolor markers by selecting "Colorful" in the Color Mode dropdown menu</li>
       </ul>
