--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
         <li>Wear your red/green glasses as guided by your vision therapist.</li>
         <li>Select the matching letters in alphabetical order.</li>
         <li>If any letters appear to fade or disappear, try any anti-supperssion techniques that help you to engage both eyes.</li>
-        <li>Discontinue this activity/ if you experience consistent double vision and are unable to resolve this as you play.</li>
+        <li>Discontinue this activity if you experience consistent double vision and are unable to resolve this as you play.</li>
       </ul>
       <b>Monocular Fixation in Binocular Field</b>
       <ul>
